[package]
name = "reign"
version = "0.2.1"
description = "Opinionated Fullstack Web Framework in Rust"
keywords = ["fullstack", "web", "framework", "reign"]

authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2021"
rust-version = "1.64.0"
homepage = "https://reign.rs"
repository = "https://github.com/pksunkara/reign"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]

autoexamples = false

[[bin]]
name = "reign"
path = "src/cli/main.rs"
required-features = ["cli"]

[lib]
name = "reign"
path = "src/lib.rs"

[features]
default = ["view", "router", "model-postgres", "framework", "json"]

cli = [
	"reign_task/templating", "clap", "Inflector"
]

view = ["reign_view", "reign_derive/view"]
router = ["reign_router", "reign_derive/router", "log"]
model-postgres = ["reign_model/model-postgres", "reign_derive/model-postgres"]
framework = ["reign_boot", "reign_derive/framework", "reign_model?/plugin"]

cookie = ["reign_router/cookie", "router"]
session = ["reign_router/session", "router"]
json = ["reign_router/json", "router"]

hot-reload = ["reign_view/hot-reload", "reign_derive/hot-reload"]

[dependencies]
# lib deps
log = { version = "0.4.14", optional = true }
reign_boot = { path = "./reign_boot", version = "0.2.0", optional = true }
reign_derive = { path = "./reign_derive", version = "0.2.0", optional = true }
reign_model = { path = "./reign_model", version = "0.2.0", optional = true }
reign_router = { path = "./reign_router", version = "0.2.0", optional = true }
reign_view = { path = "./reign_view", version = "0.2.0", optional = true }

# cli deps
reign_task = { path = "./reign_task", version = "0.2.0", optional = true }
clap = { version = "3.0.0", optional = true, features = ["derive", "wrap_help"] }
Inflector = { version = "0.11.4", optional = true }

[dev-dependencies]

[workspace]
members = [
	".",
	"reign_boot",
	"reign_derive",
	"reign_model",
	"reign_plugin",
	"reign_router",
	"reign_view",
	"reign_task",

	"plugins/*",
	"utils/*",
	"tasks/*",

	"examples/model-postgres",
	"examples/router",
	"examples/view",
]
default-members = [
	".",
	"reign_boot",
	"reign_derive",
	"reign_model",
	"reign_plugin",
	"reign_router",
	"reign_view",
	"reign_task",

	"plugins/*",
	"utils/*",
	"tasks/*",
]

[workspace.package]
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2021"
rust-version = "1.64.0"
homepage = "https://reign.rs"
repository = "https://github.com/pksunkara/reign"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]

[workspace.dependencies]
anyhow = "1.0.44"
bb8-redis = "0.9.0"
chrono = "0.4.19"
futures = "0.3.13"
hyper = "0.14.4"
Inflector = "0.11.4"
log = "0.4.14"
once_cell = "1.7.2"
regex = "1.4.3"
serde = "1.0.130"
serde_json = "1.0.68"
thiserror = "1.0.29"
tokio = "1.2.0"

[package.metadata.docs.rs]
all-features = true
