[package]
name = "reign"
version = "0.1.2"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["fullstack", "web", "framework", "reign"]
categories = []
license = "MIT OR Apache-2.0"
readme = "README.md"
autoexamples = false

[[bin]]
name = "reign"
path = "src/cli/main.rs"
required-features = ["cli"] # remove the need for this

[lib]
name = "reign"
path = "src/lib.rs"

[dependencies]
# common deps
log = "0.4.8"

# lib deps
reign_boot = { path = "./reign_boot", version = "0.1.2", optional = true }
reign_derive = { path = "./reign_derive", version = "0.1.2", optional = true }
reign_router = { path = "./reign_router", version = "0.1.2", optional = true }
reign_view = { path = "./reign_view", version = "0.1.2", optional = true }

# cli deps
clap = { version = "3.0.0-beta.1", optional = true }

[dev-dependencies]
version-sync = "0.9.0"

[workspace]
members = [
	"reign_boot",
	"reign_derive",
	"reign_router",
	"reign_view",

	"development/test_examples",
]
default-members = [
	".",
	"reign_boot",
	"reign_derive",
	"reign_router",
	"reign_view",
]

[features]
default = ["view-gotham", "router-gotham", "framework"]
cli = ["clap"]
doc = []
framework = ["reign_boot"]
view = ["reign_view", "reign_derive/view"]
view-actix = ["reign_view/view-actix", "reign_derive/view-actix", "view"]
view-gotham = ["reign_view/view-gotham", "reign_derive/view-gotham", "view"]
view-tide = ["reign_view/view-tide", "reign_derive/view-tide", "view"]
view-warp = ["reign_view/view-warp", "reign_derive/view-warp", "view"]
json = ["reign_view/json", "reign_derive/json", "view"]
router = ["reign_router", "reign_derive/router"]
router-actix = ["reign_router/router-actix", "reign_derive/router-actix", "router"]
router-gotham = ["reign_router/router-gotham", "reign_derive/router-gotham", "router"]
router-tide  = ["reign_router/router-tide", "reign_derive/router-tide", "router"]
router-warp = ["reign_router/router-warp", "reign_derive/router-warp", "router"]

[package.metadata.docs.rs]
all-features = true
