[package]
name = "reign_boot"
version = "0.2.1"
description = "Opinionated Fullstack Web Framework in Rust"
keywords = ["fullstack", "web", "framework", "reign"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_boot"
path = "src/lib.rs"

[features]
default = []

[dependencies]
dotenvy = "0.15.0"
env_logger = "0.8.3"
envy = "0.4.2"
once_cell = { workspace = true }
reign_plugin = { path = "../reign_plugin", version = "0.2.1" }
serde = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
