[package]
name = "reign_derive"
version = "0.2.1"
description = "Opinionated Fullstack Web Framework in Rust"
keywords = ["fullstack", "web", "framework", "reign"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[features]
default = []
framework = ["Inflector"]
model-postgres = ["Inflector"]
view = ["reign_view", "regex", "Inflector", "once_cell"]
router = []
hot-reload = ["serde_json"]

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = { version = "1.0.76", features = ["full"] }

Inflector = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
reign_view = { path = "../reign_view", version = "0.2.1", optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
reign = { path = "../" }
rustversion = "1.0.4"
serial_test = "0.5.1"
tokio = { workspace = true, features = ["full"] }
trybuild = "1.0.41"

[package.metadata.docs.rs]
all-features = true
