[package]
name = "reign_model"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["fullstack", "web", "framework", "reign", "model"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"

[lib]
name = "reign_model"
path = "src/lib.rs"

[dependencies]
log = "0.4.8"
thiserror = "1.0.19"
anyhow = "1.0.31"
once_cell = "1.4.0"
diesel = { path = "../../../reign-rs/diesel/diesel", features = ["chrono", "r2d2"] }
tokio-diesel = { path = "../../../reign-rs/tokio-diesel", version = "0.3.0" }
reign_plugin = { path = "../reign_plugin", version = "0.2.1", optional = true }

[dev-dependencies]
reign = { path = "../" }
version-sync = "0.9.0"

[features]
default = []
doc = []
framework = ["reign_plugin"]
model-postgres = ["diesel/postgres"]

[package.metadata.docs.rs]
all-features = true
