[package]
name = "reign_model"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2021"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["fullstack", "web", "framework", "reign", "model"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"

[lib]
name = "reign_model"
path = "src/lib.rs"

[dependencies]
log = "0.4.14"
thiserror = "1.0.29"
once_cell = "1.7.2"
diesel = { git = "https://github.com/diesel-rs/diesel", package = "diesel", features = ["chrono", "r2d2"] }
tokio-diesel = { git = "https://github.com/felinira/tokio-diesel" }
reign_plugin = { path = "../reign_plugin", version = "0.2.1", optional = true }

[dev-dependencies]
reign = { path = "../" }

[features]
default = []
plugin = ["reign_plugin"]
model-postgres = ["diesel/postgres"]

[package.metadata.docs.rs]
all-features = true
