[package]
name = "reign_model"
version = "0.2.1"
description = "Opinionated Fullstack Web Framework in Rust"
keywords = ["fullstack", "web", "framework", "reign", "model"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_model"
path = "src/lib.rs"

[features]
default = []
plugin = ["reign_plugin"]
model-postgres = ["diesel/postgres"]

[dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel", package = "diesel", features = ["chrono", "r2d2"] }
log = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tokio-diesel = { git = "https://github.com/felinira/tokio-diesel" }

reign_plugin = { path = "../reign_plugin", version = "0.2.1", optional = true }

[dev-dependencies]
reign = { path = "../" }

[package.metadata.docs.rs]
all-features = true
