[package]
name = "reign_plugin"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2021"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["plugin", "fullstack", "web", "framework", "reign"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"

[lib]
name = "reign_plugin"
path = "src/lib.rs"

[dependencies]
reign_router = { path = "../reign_router", version = "0.2.1" }

[dev-dependencies]
version-sync = "0.9.3"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
