[package]
name = "reign_plugin"
version = "0.2.1"
description = "Opinionated Fullstack Web Framework in Rust"
keywords = ["plugin", "fullstack", "web", "framework", "reign"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_plugin"
path = "src/lib.rs"

[features]
default = []

[dependencies]
reign_router = { path = "../reign_router", version = "0.2.1" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
