[package]
name = "reign_router"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["fullstack", "web", "framework", "reign", "router"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"

[lib]
name = "reign_router"
path = "src/lib.rs"

[dependencies]
url = "2.1.1"
mime = "0.3.16"
hyper = { version = "0.14.2", features = ["server", "http1", "http2", "tcp"] }
futures = "0.3.5"
tokio = { version = "1.2.0", features = ["io-util"] }
log = "0.4.8"
thiserror = "1.0.19"
anyhow = "1.0.31"
chrono = "0.4.19"
regex = "1.3.9"
percent-encoding = "2.1.0"
paste = "1.0.2"
cookie_r = { package = "cookie", version = "0.15.0", features = [], optional = true }
serde = { version = "1.0.110", optional = true }
serde_json = { version = "1.0.53", optional = true }
bincode = { version = "1.2.1", optional = true }
rand = { version = "0.8.3", optional = true }
rand_chacha = { version = "0.3.0", optional = true }
base64 = { version = "0.13.0", optional = true }

[dev-dependencies]
reign = { path = "../", features = ["session"] }
version-sync = "0.9.0"
tokio = { version = "1.2.0", features = ["macros"] }
reqwest = "0.11.0"
serde = { version = "1.0.110", features = ["derive"] }

[features]
default = []
cookie = ["cookie_r"]
session = ["cookie", "serde", "bincode", "rand", "rand_chacha", "base64"]
json = ["serde", "serde_json"]

[package.metadata.docs.rs]
all-features = true
