[package]
name = "reign_router"
version = "0.2.1"
description = "Opinionated Fullstack Web Framework in Rust"
keywords = ["fullstack", "web", "framework", "reign", "router"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_router"
path = "src/lib.rs"

[features]
default = []
cookie = ["dep:cookie"]
session = ["cookie", "serde", "bincode", "rand", "rand_chacha", "base64"]
json = ["serde", "serde_json"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true, features = ["server", "http1", "http2", "tcp"] }
log = { workspace = true }
mime = "0.3.16"
percent-encoding = "2.1.0"
paste = "1.0.4"
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
url = "2.2.1"

base64 = { version = "0.13.0", optional = true }
bincode = { version = "1.3.1", optional = true }
cookie = { version = "0.15.0", features = [], optional = true }
rand = { version = "0.8.3", optional = true }
rand_chacha = { version = "0.3.0", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
reign = { path = "../", features = ["session"] }
reqwest = "0.11.1"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
