[package]
name = "reign_task"
version = "0.2.1"
description = "Opinionated Fullstack Web Framework in Rust"
keywords = ["task", "fullstack", "web", "framework", "reign"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_task"
path = "src/lib.rs"

[features]
default = []
templating = ["handlebars", "serde_json"]

[dependencies]
anyhow = { workspace = true }
oclif = "0.4.0"
thiserror = { workspace = true }

handlebars = { version = "3.5.3", optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
