[package]
name = "reign_view"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["fullstack", "web", "framework", "reign", "view"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"
exclude = ["src/views"]

[lib]
name = "reign_view"
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0.22", features = ["full"] }
quote = "1.0.6"
proc-macro2 = "1.0.13"
regex = "1.3.9"
Inflector = "0.11.4"
maplit = "1.0.2"
once_cell = "1.5.2"
hyper = { version = "0.14.2", optional = true }
mime = { version = "0.3.16", optional = true }
serde = { version = "1.0.110", optional = true }
serde_json = { version = "1.0.53", optional = true }

[dev-dependencies]
reign = { path = "../" }
pretty_assertions = "0.6.1"
version-sync = "0.9.0"
tokio = { version = "1.2.0", features = ["macros"] }
reqwest = "0.11.0"
serde = { version = "1.0.110", features = ["derive"] }

[features]
default = []
doc = []
view-backend = ["hyper", "mime", "serde", "serde_json"]
hot-reload = []

[package.metadata.docs.rs]
all-features = true
