[package]
name = "reign_view"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["fullstack", "web", "framework", "reign", "view"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"
exclude = ["src/views"]

[lib]
name = "reign_view"
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0.76", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.29"
regex = "1.4.3"
Inflector = "0.11.4"
maplit = "1.0.2"
once_cell = "1.7.2"

[dev-dependencies]
reign = { path = "../" }
pretty_assertions = "0.6.1"
version-sync = "0.9.3"

[features]
default = []
hot-reload = []

[package.metadata.docs.rs]
all-features = true
