[package]
name = "reign_view"
version = "0.2.1"
description = "Opinionated Fullstack Web Framework in Rust"
keywords = ["fullstack", "web", "framework", "reign", "view"]
exclude = ["src/views"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_view"
path = "src/lib.rs"

[features]
default = []
hot-reload = []

[dependencies]
Inflector = { workspace = true }
maplit = "1.0.2"
once_cell = { workspace = true }
proc-macro2 = "1.0.29"
quote = "1.0.9"
regex = { workspace = true }
syn = { version = "1.0.76", features = ["full"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
reign = { path = "../" }

[package.metadata.docs.rs]
all-features = true
