[package]
name = "examples_basic"
version = "0.0.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reign = { path = "../.." }
diesel = { version = "1.4.3", features = ["sqlite"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
