[package]
name = "examples_full"
version = "0.0.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reign = { path = "../..", features = ["session"] }
reign_plugin_redis = { path = "../../plugins/reign_plugin_redis" }
reign_plugin_static = { path = "../../plugins/reign_plugin_static" }
reign_session_backend_redis = { path = "../../utils/reign_session_backend_redis" }
tokio = { version = "1.2.0", features = ["full"] }
serde = { version = "1.0.110", features = ["derive"] }
thiserror = "1.0.19"
anyhow = "1.0.31"
chrono = "0.4.19"
serde_urlencoded = "0.7.0"

[build-dependencies]
walkdir = "2.3"

[workspace]
members = [
	".",
	"xtask",
]
