[package]
name = "examples_model_postgres"
version = "0.0.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reign = { path = "../..", features = ["model-postgres"], default-features = false }
tokio = { version = "1.2.0", features = ["full"] }
diesel = { path = "../../../../reign-rs/diesel/diesel" }
diesel_migrations = { path = "../../../../reign-rs/diesel/diesel_migrations" }
