[package]
name = "examples_model_postgres"
version = "0.0.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
reign = { path = "../..", features = ["model-postgres"], default-features = false }
tokio = { version = "1.2.0", features = ["full"] }
diesel = { git = "https://github.com/diesel-rs/diesel", package = "diesel" }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", package = "diesel_migrations" }
