[package]
name = "examples_router_backend"
version = "0.0.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reign = { path = "../..", features = ["router-backend"], default-features = false }
tokio = { version = "0.2.21", features = ["full"] }
thiserror = "1.0.19"
serde_json = "1.0.53"

[dev-dependencies]
reqwest = "0.10.6"
