[package]
name = "examples_router_backend"
version = "0.0.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reign = { path = "../..", features = ["router-backend"], default-features = false }
tokio = { version = "1.2.0", features = ["full"] }
thiserror = "1.0.19"
anyhow = "1.0.31"
serde_json = "1.0.53"

[dev-dependencies]
reqwest = "0.11.0"
