[package]
name = "examples_view_backend"
version = "0.0.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reign = { path = "../..", features = ["view-backend"], default-features = false }
tokio = { version = "1.2.0", features = ["full"] }
hyper = { version = "0.14.2", features = ["server", "http2"] }
serde = { version = "1.0.110", features = ["derive"] }

[dev-dependencies]
reqwest = "0.11.0"
