[package]
name = "examples_view_router"
version = "0.0.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reign = { path = "../..", features = ["view-router", "router"], default-features = false }
tokio = { version = "0.2.21", features = ["full"] }
serde = { version = "1.0.110", features = ["derive"] }

[dev-dependencies]
reqwest = "0.10.6"
