[package]
name = "reign_plugin_redis"
version = "0.0.0"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Redis plugin for reign"
repository = "https://github.com/pksunkara/reign"
keywords = ["redis", "web", "reign", "plugin"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"

[lib]
name = "reign_plugin_redis"
path = "src/lib.rs"

[dependencies]
reign_plugin = { path = "../../reign_plugin", version = "0.2.1" }
bb8-redis = "0.5.0"
once_cell = "1.4.0"

[dev-dependencies]
version-sync = "0.9.0"

[features]
default = []
doc = []

[package.metadata.docs.rs]
all-features = true

[package.metadata.workspaces]
independent = true
