[package]
name = "reign_plugin_redis"
version = "0.2.1"
description = "Redis plugin for reign"
keywords = ["redis", "web", "reign", "plugin"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_plugin_redis"
path = "src/lib.rs"

[features]
default = []

[dependencies]
bb8-redis = { workspace = true }
once_cell = { workspace = true }
reign_plugin = { path = "../../reign_plugin", version = "0.2.1" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
